🐛 BUG FIX - About button mobile

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -716,7 +716,7 @@ main address {
 	#aboutButton {
 		position: relative;
 		width: 100%;
-		bottom: 100px;
+		bottom: 0;
 		border-top: none;
 	}
 	
